Fix the scrollbar in axis X

--- a/css/album-detail.css
+++ b/css/album-detail.css
@@ -1,6 +1,7 @@
 .cover {
     flex: 1;
     background: var(--gray50);
+    overflow: hidden;
 }
 
 .albumDetail {
