--- a/css/album.css
+++ b/css/album.css
@@ -6,6 +6,7 @@
     flex: 1;
     position: relative;
     background-size: cover;
+    overflow: hidden;
 }
 
 .coverArtist {
